--- a/assets/style.css
+++ b/assets/style.css
@@ -78,7 +78,6 @@ html, body, #_dash-app { /* Target the entire Dash app container */
 /* Media Query para telas menores (celulares) */
 @media (max-width: 768px) {
     #fixed-header-container {
-        position: relative; /* Muda para relativo no celular */
         margin-bottom: 0px;
         box-shadow: none;
         background-color: var(--primary-color) !important;
@@ -124,8 +123,8 @@ html, body, #_dash-app { /* Target the entire Dash app container */
     
     /* Ajuste para o botão da sidebar no mobile, para que ele role junto */
     .toggle-sidebar-button-class {
-        position: absolute; /* Muda para absolute no mobile para rolar com o conteúdo */
-        top: 80px; /* Mantém a posição relativa ao elemento pai (body ou main-content-wrapper) */
+        position: absolute !important; /* Muda para absolute no mobile para rolar com o conteúdo */
+        top: 20px !important; /* Mantém a posição relativa ao elemento pai (body ou main-content-wrapper) */
     }
 
     /* Remove o padding-top do main-content-wrapper no mobile, já que o cabeçalho é relativo */
