--- a/assets/style.css
+++ b/assets/style.css
@@ -262,13 +262,13 @@ html, body, #_dash-app { /* Target the entire Dash app container */
 
 /* Cor do texto da tag selecionada (o valor, e.g., "NATU3") */
 .dash-dropdown-custom .Select-value-label {
-    color: var(--primary-color) !important; /* Deve ser azul escuro para contraste no fundo dourado */
+    color: var(--text-color-light) !important; /* Deve ser azul escuro para contraste no fundo dourado */ /* CLARA PARA CONTRASTE COM AZUL FELIPE */
     opacity: 1 !important; 
 }
 
 /* Estilo do ícone 'X' em estado normal */
 .dash-dropdown-custom .Select-value-icon {
-    color: var(--text-color-light) !important; /*var(--primary-color) !important; /* Cor inicial: azul escuro */
+    color: var(--text-color-light) !important; /* Cor inicial: clara */
     fill: var(--text-color-light) !important; /* Para ícones SVG */
     font-weight: bold !important;
     opacity: 1 !important;
@@ -300,7 +300,7 @@ html, body, #_dash-app { /* Target the entire Dash app container */
 
 /* Força a cor do ícone 'X' (o .Select-value-icon) quando seu PARENT .Select-value-label__remove está em hover */
 .dash-dropdown-custom .Select-value-label__remove:hover .Select-value-icon {
-    color: var(--text-color-light) !important; /* O 'X' fica branco */
+    color: var(--secondary-color) !important; /* O 'X' fica branco */ /* O X FICA DOURADO COM O MOUSE EM CIMA FELIPE */
     fill: var(--text-color-light) !important; /* Para ícones SVG */
     stroke: var(--text-color-light) !important; /* Para SVGs que usam stroke */
     background-color: transparent !important; /* Garante que o ícone em si não tenha fundo */
